objects/AIA_Benefit_Design__c.object
<CustomObject>
    <fields>
        <fullName>Pharmacy_Management_Approval_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacy Management Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Management_Response_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacy Management Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Management_Response_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacy Management Response (Days)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Operations_Approval_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacy Operations Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Operations_Response_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacy Operations Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Operations_Response_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacy Operations Response (Days)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Auditor_Approval_Start_Date__c</fullName>
        <description>This will be filled when QA Auditor receives notification to approve the BD</description>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Auditor Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Auditor_Final_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>QA Auditor Final Notification</description>
        <label>QA Auditor Final Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Auditor_Initial_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>QA Auditor Initial Notification</description>
        <label>QA Auditor Initial Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Auditor__c</fullName>
        <description>This field will be used for sending an email to NAEGS.Audit@carefirst.com for BD approval</description>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Auditor</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Related_BRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related BRF</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Benefit Design (Related BRF)</relationshipLabel>
        <relationshipName>Benefit_Design1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Religions_Exemption_Prerequisites__c</fullName>
        <inlineHelpText>The Group official self-certified on company letterhead the group is a church, or a church’s integrated auxiliary(ies), or a convention or association of churches.</inlineHelpText>
        <label>Religions Exemption Prerequisites</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Religious_Accommodations_Comments__c</fullName>
        <formula>"To meet all criteria the group of services below should be \"Yes\""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Religious Accommodations Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Religious_Organization__c</fullName>
        <inlineHelpText>The Group holds itself out as a religious organization</inlineHelpText>
        <label>Religious Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Effective_Date_Drawloop_Checker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be updated by the workflow "AIA Renewal Effective Date Drawloop Checker" and this field is used in process builder "AIA BDF Renewal Date Population From BD"</description>
        <label>Renewal Effective Date Drawloop Checker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Effective_Date_Drawloop__c</fullName>
        <formula>/*IF( Benefit_Request_Form__r.Account__r.Has_Sub_Groups__c =true, Parent_Account__r.Final_Renewal_Date__c , Account__r.Final_Renewal_Date__c )*/


Parent_Account__r.Final_Renewal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Effective Date Drawloop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revision_No_Drawloop__c</fullName>
        <formula>MID(Revision_Number__c , 5 , Len(Revision_Number__c)-4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revision No. Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Number_Technical__c</fullName>
        <formula>Account__r.AIA_BD_Revision_Number__c</formula>
        <label>Revision Number Technical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <formula>'SF - ' + TEXT(Revision_Number_Technical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revision Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Cert_for_Religious_Accommodation__c</fullName>
        <inlineHelpText>The Group has provided CareFirst self-certification stating it satisfies all religious accommodation criteria</inlineHelpText>
        <label>Self Cert for Religious Accommodation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_BD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source BD</label>
        <referenceTo>AIA_Benefit_Design__c</referenceTo>
        <relationshipLabel>Benefit Design</relationshipLabel>
        <relationshipName>Benefit_Design</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Group_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>story 3416 - aia</description>
        <label>Sub Group Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Design (Sub Group Account)</relationshipLabel>
        <relationshipName>Benefit_DesignSubGroupAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <formula>IF( INCLUDES(Benefit_Request_Form__r.Opportunity__r.System__c, 'NASCO'), 'NASCO,', null) + 
IF( INCLUDES(Benefit_Request_Form__r.Opportunity__r.System__c, 'FACETS'), 'FACETS,', null)</formula>
        <label>System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Analyst_Approval_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Analyst Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Analyst_Response_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Analyst Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Analyst_Response_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Analyst Response (Days)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_legal_name_drawloop__c</fullName>
        <formula>IF( Benefit_Request_Form__r.Account__r.Has_Sub_Groups__c =true, Parent_Account__r.Account_Legal_Name__c , Account__r.Account_Legal_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>account legal name drawloop</label>
        <type>Text</type>
    </fields>
    <label>Benefit Design</label>
    <nameField>
        <displayFormat>BD-{00000000}</displayFormat>
        <label>Benefit Design Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit Design</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Approved_BDs</fullName>
        <columns>Account__c</columns>
        <columns>Implementation__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Approval_Initial_Submission_Date__c</columns>
        <columns>BD_Approval_Date__c</columns>
        <columns>Days_to_Approve_BDF__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>zenimax</value>
        </filters>
        <label>Approved BDs</label>
    </listViews>
    <validationRules>
        <fullName>EBD001</fullName>
        <active>false</active>
        <errorConditionFormula>AND ( NOT ( TEXT ( Benefit_Request_Form__r.Grandfathered_Status__c ) = 'Non-Grandfathered' ), 
(OR( ISCHANGED(Religions_Exemption_Prerequisites__c), ISCHANGED(Oppose_Contracteptive_Service__c), 
ISCHANGED(Nonprofit__c ), ISCHANGED(Religious_Organization__c), ISCHANGED( Self_Cert_for_Religious_Accommodation__c ) ) ) )</errorConditionFormula>
        <errorMessage>EBD001:You can edit Religious Exemption Prerequisites or Religious Accommodation section only if it is Non-Grandfathered in BRF.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD002</fullName>
        <active>false</active>
        <description>EBD002: Exemption is available to Non-grandfathered groups that satisfy exemption</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND(TEXT(Religions_Exemption_Prerequisites__c)='No',
(OR(NOT(ISBLANK(TEXT(Oppose_Contracteptive_Service__c ))),NOT(ISBLANK(TEXT(Nonprofit__c ))), 
NOT(ISBLANK(TEXT(Self_Cert_for_Religious_Accommodation__c ))), NOT(ISBLANK(TEXT(Religious_Organization__c )))))))</errorConditionFormula>
        <errorMessage>EBD002: Exemption is available to Non-grandfathered groups that satisfy exemption</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD005</fullName>
        <active>false</active>
        <description>EBD005:  Exemption is available to Non-grandfathered groups that satisfy exemption</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; 
(AND(TEXT(Religions_Exemption_Prerequisites__c)='Yes', 
AND(TEXT(Benefit_Selection__c)&lt;&gt;'Full Exclusion',TEXT(Benefit_Selection__c)&lt;&gt; Null) ,
(OR((ISBLANK(TEXT(Oppose_Contracteptive_Service__c ))),(ISBLANK(TEXT(Nonprofit__c ))), 
(ISBLANK(TEXT(Self_Cert_for_Religious_Accommodation__c ))), (ISBLANK(TEXT(Religious_Organization__c )))))))</errorConditionFormula>
        <errorMessage>EBD005:  Exemption is available to Non-grandfathered groups that satisfy exemption</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD006</fullName>
        <active>false</active>
        <description>EBD006: Accommodation options are available to Non-grandfathered groups that satisfy all Accommodation requirements</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; 
(AND(TEXT(Religions_Exemption_Prerequisites__c)='Yes', 
AND(TEXT(Benefit_Selection__c)&lt;&gt;'Full Exclusion',TEXT(Benefit_Selection__c)&lt;&gt; 'Emergency Contraception Exclusion') , 
(AND(NOT(ISBLANK(TEXT(Oppose_Contracteptive_Service__c ))),NOT(ISBLANK(TEXT(Nonprofit__c ))), 
NOT(ISBLANK(TEXT(Self_Cert_for_Religious_Accommodation__c ))), NOT(ISBLANK(TEXT(Religious_Organization__c )))))))</errorConditionFormula>
        <errorDisplayField>Benefit_Selection__c</errorDisplayField>
        <errorMessage>EBD006: Accommodation options are available to Non-grandfathered groups that satisfy all Accommodation requirements</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD007</fullName>
        <active>false</active>
        <description>EBD007: Approval Status - NASCO Benefit Coder should be only N/A if Approver - NASCO Benefact Coder is blank</description>
        <errorConditionFormula>IF(ISNEW(),false,ISBLANK(Approver_Benefit_Coder__c) &amp;&amp; Text( AIA_Approval_Status_NASCO_Benefit_Coder__c)&lt;&gt;'N/A')</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_NASCO_Benefit_Coder__c</errorDisplayField>
        <errorMessage>EBD007: Approval Status - NASCO Benefit Coder should be only N/A if Approver - NASCO Benefact Coder is blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD008</fullName>
        <active>true</active>
        <description>EBD008: Approval Status - Ancillary Tech should be only N/A if Approver - Ancillary Tech is blank</description>
        <errorConditionFormula>/*IF(ISNEW(),false,ISBLANK( Approver_Ancillary_Analyst__c  ) &amp;&amp; Text( Approval_Status_Analyst__c )&lt;&gt;'N/A')*/

Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND( 
ISPICKVAL( PRIORVALUE ( Approval_Status_Analyst__c ), "N/A"), 
Text(Approval_Status_Analyst__c )= ""))</errorConditionFormula>
        <errorDisplayField>Approval_Status_Analyst__c</errorDisplayField>
        <errorMessage>EBD008: Approval Status - Ancillary Tech should be only N/A if Approver - Ancillary Tech is blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD009</fullName>
        <active>true</active>
        <description>EBD009: Approval Status - Contract Tech should be only N/A Approver - Contract Tech is blank</description>
        <errorConditionFormula>IF(ISNEW(),false,ISBLANK(Approver_Contract_Tech__c) &amp;&amp; Text(   AIA_Approval_Status_Contract_Tech__c)&lt;&gt;'N/A')</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_Contract_Tech__c</errorDisplayField>
        <errorMessage>EBD009: Approval Status - Contract Tech should be only N/A Approver - Contract Tech is blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD010</fullName>
        <active>true</active>
        <description>EBD010: Approval Status - Benefact Coder should be only N/A if Approver - Benefact Coder is blank</description>
        <errorConditionFormula>IF(ISNEW(),false,ISBLANK(AIA_Approver_Benefact_Coder__c) &amp;&amp; Text(AIA_Approval_Status_Benefact_Coder__c)&lt;&gt;'N/A')</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_Benefact_Coder__c</errorDisplayField>
        <errorMessage>EBD010: Approval Status - Benefact Coder should be only N/A if Approver - Benefact Coder is blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD011</fullName>
        <active>true</active>
        <description>EBD011: Approval Status - MAST Tech should be only N/A Approver - MAST Tech is blank</description>
        <errorConditionFormula>IF(ISNEW(),false,ISBLANK(AIA_Approver_MAST_Tech__c) &amp;&amp; Text(    Approval_Status_MAST_Tech__c)&lt;&gt;'N/A')</errorConditionFormula>
        <errorDisplayField>Approval_Status_MAST_Tech__c</errorDisplayField>
        <errorMessage>EBD011: Approval Status - MAST Tech should be only N/A Approver - MAST Tech is blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD012</fullName>
        <active>true</active>
        <description>EBD012: Approval Status - Ancillary Analyst Tech  should not be  N/A if Approver - Ancillary Analyst is not blank</description>
        <errorConditionFormula>/*IF(ISNEW(),false,TEXT(Approval_Status_Analyst__c) = 'N/A' &amp;&amp; NOT(ISBLANK(Approver_Ancillary_Analyst__c)))*/

Not($Permission.Ignore_Validation_Rules) &amp;&amp;(AND(TEXT(Approval_Status_Analyst__c) = 'N/A' ,NOT(ISBLANK(Approver_Ancillary_Analyst__c)),NOT(ISNEW())))</errorConditionFormula>
        <errorDisplayField>Approval_Status_Analyst__c</errorDisplayField>
        <errorMessage>EBD012: Approval Status - Ancillary Analyst Tech  should not be  N/A if Approver - Ancillary Analyst is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD013</fullName>
        <active>true</active>
        <description>EBD013: Approval Status - Contract Tech  should not be  N/A if Approver - Contract Tech is not blank</description>
        <errorConditionFormula>IF(ISNEW(),false,TEXT( AIA_Approval_Status_Contract_Tech__c ) = 'N/A' &amp;&amp; NOT(ISBLANK( Approver_Contract_Tech__c  )))</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_Contract_Tech__c</errorDisplayField>
        <errorMessage>EBD013 Approval Status - Contract Tech  should not be  N/A if Approver - Contract Tech is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD014</fullName>
        <active>false</active>
        <description>EBD014: Approval Status - NASCO Benefit Coder should not be  N/A if Approver - NASCO Benefit Coder is not blank</description>
        <errorConditionFormula>IF(ISNEW(),false,TEXT(AIA_Approval_Status_NASCO_Benefit_Coder__c) = 'N/A' &amp;&amp; NOT(ISBLANK( Approver_Benefit_Coder__c)))</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_NASCO_Benefit_Coder__c</errorDisplayField>
        <errorMessage>EBD014: Approval Status - NASCO Benefit Coder  should not be  N/A if Approver - NASCO Benefit Coder is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD015</fullName>
        <active>true</active>
        <description>EBD015: Approval Status - Benefact Coder  should not be  N/A if Approver - Benefact Coder is not blank</description>
        <errorConditionFormula>IF(ISNEW(),false,TEXT(AIA_Approval_Status_Benefact_Coder__c) = 'N/A' &amp;&amp; NOT(ISBLANK( AIA_Approver_Benefact_Coder__c)))</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_Benefact_Coder__c</errorDisplayField>
        <errorMessage>EBD015: Approval Status - Benefact Coder  should not be  N/A if Approver - Benefact Coder is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD016</fullName>
        <active>true</active>
        <description>EBD016: Approval Status - MAST Tech  should not be  N/A if Approver - MAST Tech is not blank</description>
        <errorConditionFormula>IF(ISNEW(),false,TEXT(Approval_Status_MAST_Tech__c) = 'N/A' &amp;&amp; NOT(ISBLANK(   AIA_Approver_MAST_Tech__c)))</errorConditionFormula>
        <errorDisplayField>Approval_Status_MAST_Tech__c</errorDisplayField>
        <errorMessage>EBD016: Approval Status - MAST Tech  should not be  N/A if Approver - MAST Tech is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD017</fullName>
        <active>true</active>
        <description>EBD017: User can change status only from 'Rejected' to 'In Progress'</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;  $Setup.BDApprovalValidation__c.IsAppProcess__c = false &amp;&amp; OR((AND( ISCHANGED(Status__c) ,Text(Status__c)= "In Progress",TEXT(PRIORVALUE ( Status__c))!='Rejected')),AND(ISCHANGED(Status__c),Text(Status__c)= "In Review")) &amp;&amp; NOT(ISNEW()) &amp;&amp;  NOT(ISCLONE()) &amp;&amp; $Profile.Name != 'System Administrator'</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>EBD017: User can change status only from 'Rejected' to 'In Progress'</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD018</fullName>
        <active>true</active>
        <description>EBD018: Only QA Auditor can change status  to Approved or Rejected</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND($User.Id != Approver_QA_Auditor__c, ISCHANGED(Status__c)  ,OR(TEXT(Status__c) = 'Approved',TEXT(Status__c)='Rejected'))) &amp;&amp; $Profile.Name != 'System Administrator' &amp;&amp;  NOT($Permission.AIA_Ignore_for_AIA_Admin)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>EBD018: Only QA Auditor can change status  to Approved or Rejected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD019</fullName>
        <active>true</active>
        <description>Only specific person of the corresponding role can change this field</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND($User.Id !=   Approver_Contract_Tech__r.Id, ISCHANGED( AIA_Approval_Status_Contract_Tech__c ), TEXT(AIA_Approval_Status_Contract_Tech__c) !='')) &amp;&amp;   $Profile.Name != 'System Administrator' &amp;&amp;  NOT($Permission.AIA_Ignore_for_AIA_Admin)</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_Contract_Tech__c</errorDisplayField>
        <errorMessage>EDB019: You cannot change this field since you are not the authorized person</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD020</fullName>
        <active>true</active>
        <description>Only specific person of the corresponding role can change this field</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND($User.Id !=  AIA_Approver_Benefact_Coder__r.Id , ISCHANGED( AIA_Approval_Status_Benefact_Coder__c ), TEXT(AIA_Approval_Status_Benefact_Coder__c) !=''))&amp;&amp; $Profile.Name != 'System Administrator' &amp;&amp;  NOT($Permission.AIA_Ignore_for_AIA_Admin)</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_Benefact_Coder__c</errorDisplayField>
        <errorMessage>EDB020: You cannot change this field since you are not the authorized person</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD021</fullName>
        <active>false</active>
        <description>Only specific person of the corresponding role can change this field</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND($User.Id !=  Approver_Benefit_Coder__r.Id , ISCHANGED(  AIA_Approval_Status_NASCO_Benefit_Coder__c  ), TEXT(AIA_Approval_Status_NASCO_Benefit_Coder__c) !=''))&amp;&amp; $Profile.Name != 'System Administrator' &amp;&amp;  NOT($Permission.AIA_Ignore_for_AIA_Admin)</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_NASCO_Benefit_Coder__c</errorDisplayField>
        <errorMessage>EBd021: You cannot change this field since you are not the authorized person</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD022</fullName>
        <active>true</active>
        <description>Only specific person of the corresponding role can change this field</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND($User.Id !=  AIA_Approver_MAST_Tech__r.Id , ISCHANGED(  Approval_Status_MAST_Tech__c ), TEXT(Approval_Status_MAST_Tech__c) !='')) &amp;&amp; $Profile.Name != 'System Administrator' &amp;&amp;  NOT($Permission.AIA_Ignore_for_AIA_Admin)</errorConditionFormula>
        <errorDisplayField>Approval_Status_MAST_Tech__c</errorDisplayField>
        <errorMessage>EBD022: You cannot change this field since you are not the authorized person</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD023</fullName>
        <active>true</active>
        <description>Only specific person of the corresponding role can change this field</description>
        <errorConditionFormula>/*Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND($User.Id != Approver_Ancillary_Analyst__r.Id , ISCHANGED( Approval_Status_Analyst__c ), NOT(ISBLANK( Approver_Ancillary_Analyst__c)) , OR(TEXT(AIA_Approval_Status_Contract_Tech__c)='Approved',TEXT(AIA_Approval_Status_Contract_Tech__c)='Rejected')))&amp;&amp; $Profile.Name != 'System Administrator' &amp;&amp; NOT($Permission.AIA_Ignore_for_AIA_Admin)*/ 

Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND($User.Id != Approver_Ancillary_Analyst__r.Id , ISCHANGED( Approval_Status_Analyst__c ), NOT(ISBLANK( Approver_Ancillary_Analyst__c))))&amp;&amp; $Profile.Name != 'System Administrator' &amp;&amp; NOT($Permission.AIA_Ignore_for_AIA_Admin)</errorConditionFormula>
        <errorDisplayField>Approval_Status_Analyst__c</errorDisplayField>
        <errorMessage>EBD023: You cannot change this field since you are not the authorized person</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD024</fullName>
        <active>true</active>
        <description>EBD024: Approval Status - Benefit Tester should be only N/A if Approver - Benefit Tester is blank</description>
        <errorConditionFormula>IF(ISNEW(),false,ISBLANK(AIA_Approver_Benefit_Tester__c) &amp;&amp; Text( AIA_Approval_Status_Benefit_Tester__c)&lt;&gt;'N/A')</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_Benefit_Tester__c</errorDisplayField>
        <errorMessage>EBD024: Approval Status - Benefit Tester should be only N/A if Approver - Benefit Tester is blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD025</fullName>
        <active>true</active>
        <description>EBD025: Approval Status - Benefit Tester should not be N/A if Approver - Benefit Tester is not blank</description>
        <errorConditionFormula>IF(ISNEW(),false,TEXT(AIA_Approval_Status_Benefit_Tester__c) = 'N/A' &amp;&amp; NOT(ISBLANK( AIA_Approver_Benefit_Tester__c)))</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_Benefit_Tester__c</errorDisplayField>
        <errorMessage>EBD025: Approval Status - Benefit Tester should not be N/A if Approver - Benefit Tester is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD026</fullName>
        <active>true</active>
        <description>Only specific person of the corresponding role can change this field</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND($User.Id !=  AIA_Approver_Benefit_Tester__r.Id , ISCHANGED(  AIA_Approval_Status_Benefit_Tester__c), TEXT(AIA_Approval_Status_Benefit_Tester__c) !=''))&amp;&amp; $Profile.Name != 'System Administrator' &amp;&amp;  NOT($Permission.AIA_Ignore_for_AIA_Admin)</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_Benefit_Tester__c</errorDisplayField>
        <errorMessage>EBD026: You cannot change this field since you are not the authorized person</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD027</fullName>
        <active>true</active>
        <description>EBD027: Approval Status - Pharmacy Operations should be only N/A if Approver - Pharmacy Operations is blank</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND( 
ISPICKVAL( PRIORVALUE ( Approval_Status_Pharmacy_Operations__c), "N/A"), 
Text(Approval_Status_Pharmacy_Operations__c)= ""))</errorConditionFormula>
        <errorDisplayField>Approval_Status_Pharmacy_Operations__c</errorDisplayField>
        <errorMessage>EBD027: Approval Status - Pharmacy Operations should be only N/A if Approver - Pharmacy Operations is blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD028</fullName>
        <active>true</active>
        <description>EBD028: Approval Status - Pharmacy Operations  should not be  N/A if Approver -Pharmacy Operations is not blank</description>
        <errorConditionFormula>/*IF(ISNEW(),false,TEXT(Approval_Status_Analyst__c) = 'N/A' &amp;&amp; NOT(ISBLANK(Approver_Ancillary_Analyst__c)))*/

Not($Permission.Ignore_Validation_Rules) &amp;&amp;(AND(TEXT(Approval_Status_Pharmacy_Operations__c) = 'N/A' ,NOT(ISBLANK(Approver_Pharmacy_Operations__c)),NOT(ISNEW())))</errorConditionFormula>
        <errorDisplayField>Approval_Status_Pharmacy_Operations__c</errorDisplayField>
        <errorMessage>EBD028: Approval Status - Pharmacy Operations  should not be  N/A if Approver -Pharmacy Operations is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD029</fullName>
        <active>true</active>
        <description>Only specific person of the corresponding role can change this field</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND($User.Id != Approver_Pharmacy_Operations__r.Id , ISCHANGED( Approval_Status_Pharmacy_Operations__c), NOT(ISBLANK( Approver_Pharmacy_Operations__c))))&amp;&amp; $Profile.Name != 'System Administrator' &amp;&amp; NOT($Permission.AIA_Ignore_for_AIA_Admin)</errorConditionFormula>
        <errorDisplayField>Approval_Status_Pharmacy_Operations__c</errorDisplayField>
        <errorMessage>EBD029: You cannot change this field since you are not the authorized person</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD030</fullName>
        <active>true</active>
        <description>EBD030: Approval Status - Vision Analyst should be only N/A if Approver-Vision Analyst is blank</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND( 
ISPICKVAL( PRIORVALUE ( Approval_Status_Vision_Analyst__c), "N/A"), 
Text(Approval_Status_Vision_Analyst__c)= ""))</errorConditionFormula>
        <errorDisplayField>Approval_Status_Vision_Analyst__c</errorDisplayField>
        <errorMessage>EBD030: Approval Status - Vision Analyst should be only N/A if Approver-Vision Analyst is blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD031</fullName>
        <active>true</active>
        <description>EBD031: Approval Status - Vision Analyst  should not be  N/A if Approver-Vision Analyst is not blank</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(AND(TEXT(Approval_Status_Vision_Analyst__c) = 'N/A' ,NOT(ISBLANK(Approver_Vision_Analyst__c)),NOT(ISNEW())))</errorConditionFormula>
        <errorDisplayField>Approval_Status_Vision_Analyst__c</errorDisplayField>
        <errorMessage>EBD031: Approval Status - Vision Analyst  should not be  N/A if Approver-Vision Analyst is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD032</fullName>
        <active>true</active>
        <description>Only specific person of the corresponding role can change this field</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND($User.Id != Approver_Vision_Analyst__r.Id , ISCHANGED( Approval_Status_Vision_Analyst__c), NOT(ISBLANK( Approver_Vision_Analyst__c))))&amp;&amp; $Profile.Name != 'System Administrator' &amp;&amp; NOT($Permission.AIA_Ignore_for_AIA_Admin)</errorConditionFormula>
        <errorDisplayField>Approval_Status_Vision_Analyst__c</errorDisplayField>
        <errorMessage>EBD032: You cannot change this field since you are not the authorized person</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD033</fullName>
        <active>true</active>
        <description>EBD033: Approval Status - Benefit Coder should be only N/A if Approver-Benefit Coder is blank</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND( 
ISPICKVAL( PRIORVALUE ( AIA_Approval_Status_Benefit_Coder__c), "N/A"), 
Text(AIA_Approval_Status_Benefit_Coder__c)= ""))</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_Benefit_Coder__c</errorDisplayField>
        <errorMessage>EBD033: Approval Status - Benefit Coder should be only N/A if Approver-Benefit Coder is blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBD035</fullName>
        <active>true</active>
        <description>EBD035: Approval Status - Benefit Coder  should not be  N/A if Approver-Benefit Coder is not blank</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(AND(TEXT(AIA_Approval_Status_Benefit_Coder__c) = 'N/A' ,NOT(ISBLANK(AIA_Approver_Benefit_Coder__c)),NOT(ISNEW())))</errorConditionFormula>
        <errorDisplayField>AIA_Approval_Status_Benefit_Coder__c</errorDisplayField>
        <errorMessage>EBD035: Approval Status - Benefit Coder  should not be  N/A if Approver-Benefit Coder is not blank</errorMessage>
    </validationRules>
</CustomObject>